--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,21 @@
 {
     "name": "RWC 2019 Fixtures",
     "short_name": "RWC 2019 Fixtures",
+    "prefer_related_applications": true,
     "icons": [
       {
-        "src": "/assets/img/favicon/192.png",
+        "src": "/_includes/icons/192.png",
         "sizes": "192x192",
         "type": "image/png"
       },
       {
-        "src": "/assets/img/favicon/512.png",
+        "src": "/_includes/icons/512.png",
         "sizes": "512x512",
         "type": "image/png"
       }
     ],
-    "theme_color": "#ec407a",
-    "background_color": "#ec407a",
+    "theme_color": "#2C2540",
+    "background_color": "#2C2540",
     "display": "standalone",
     "start_url": "/"
   }
